@@ -14,7 +14,7 @@ Authors@R: c(person(c("Christen","H."),"Fleming",email="flemingc@si.edu",role=c(
              person("Thomas","Mueller",role="dtc"))
 URL: http://biology.umd.edu/movement.html
 Depends: R (>= 3.3.0)
-Imports: expm, graphics, grDevices, manipulate, MASS, methods, numDeriv, pbivnorm, raster, rgdal, scales, stats, utils
+Imports: bit64, data.table, expm, fasttime, graphics, grDevices, manipulate, MASS, methods, numDeriv, pbivnorm, raster, rgdal, scales, stats, utils
 Suggests: fftw, knitr, move, sp
 Description: Functions for identifying, fitting, and applying continuous-space, continuous-time stochastic movement models to animal tracking data.
 License: GPL-3
